--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "ext-json": "*",
         "alexusmai/laravel-file-manager": "^2.4",
         "arrilot/laravel-api-generator": "^1.1",
         "axn/laravel-models-generator": "^6.1",
         "barryvdh/laravel-dompdf": "^0.8.7",
         "barryvdh/laravel-snappy": "^0.4.8",
+        "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
         "guzzlehttp/guzzle": "^6.5",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
@@ -27,8 +29,7 @@
         "niklasravnsborg/laravel-pdf": "^4.0",
         "simplesoftwareio/simple-qrcode": "~3",
         "tymon/jwt-auth": "^1.0",
-        "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3",
-      "ext-json": "*"
+        "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
